--- a/samples/MastermindSpecs/MasterMind.Specs.dproj
+++ b/samples/MastermindSpecs/MasterMind.Specs.dproj
@@ -91,7 +91,7 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <Manifest_File>..\..\(None)</Manifest_File>
-        <Debugger_DebugSourcePath>Y:\ProjectsWK\jcangas\DAFpro\src\MiniSpec\;$(Debugger_DebugSourcePath)</Debugger_DebugSourcePath>
+        <Debugger_DebugSourcePath>$(Debugger_DebugSourcePath)</Debugger_DebugSourcePath>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
