--- a/src/Commons/Daf.Commons.dproj
+++ b/src/Commons/Daf.Commons.dproj
@@ -147,6 +147,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
                 <Platform value="Win64x">True</Platform>
