--- a/src/DependencyInjection/Daf.DependencyInjection.dproj
+++ b/src/DependencyInjection/Daf.DependencyInjection.dproj
@@ -1022,6 +1022,7 @@
                 <ProjectRoot Platform="Win64x" Name="$(PROJECTNAME)"/>
             </Deployment>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
                 <Platform value="Win64x">True</Platform>
