--- a/src/Logging.Abstractions/Daf.Logging.Abstractions.dproj
+++ b/src/Logging.Abstractions/Daf.Logging.Abstractions.dproj
@@ -1009,6 +1009,7 @@
                 <ProjectRoot Platform="Win64x" Name="$(PROJECTNAME)"/>
             </Deployment>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
                 <Platform value="Win64x">False</Platform>
