--- a/src/MediatR.Abstractions/Daf.MediatR.Abstractions.dproj
+++ b/src/MediatR.Abstractions/Daf.MediatR.Abstractions.dproj
@@ -1017,6 +1017,7 @@
                 <ProjectRoot Platform="Win64x" Name="$(PROJECTNAME)"/>
             </Deployment>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
                 <Platform value="Win64x">True</Platform>
