--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -1,4 +1,4 @@
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <ProjectGuid>{B7A8E5C1-3F2D-4A9B-8C6E-1D5F2E3A4B7C}</ProjectGuid>
         <MainSource>MiniSpecSpecs.dpr</MainSource>
@@ -91,6 +91,7 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
         <Manifest_File>(None)</Manifest_File>
+        <Debugger_DebugSourcePath>Z:\ProjectsWK\jcangas\DAFce\src\MiniSpec\;$(Debugger_DebugSourcePath)</Debugger_DebugSourcePath>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -98,6 +99,9 @@
         </DelphiCompile>
         <DCCReference Include="FeatureWorld.Feat.pas"/>
         <DCCReference Include="WorldLifecycle.Feat.pas"/>
+        <DCCReference Include="FeatureHooks.Feat.pas"/>
+        <DCCReference Include="FeatureDataTable.Feat.pas"/>
+        <DCCReference Include="FeatureSpecSuite.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>test.optset</DependentOn>
@@ -121,10 +125,12 @@
                 </Source>
             </Delphi.Personality>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
         </BorlandProject>
+        <ProjectFileVersion>12</ProjectFileVersion>
     </ProjectExtensions>
     <Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
     <Import Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj" Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')"/>
