--- a/samples/CalculatorSpecs/CalculatorSpecs.dproj
+++ b/samples/CalculatorSpecs/CalculatorSpecs.dproj
@@ -92,7 +92,6 @@
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
         <DCC_UseMSBuildExternally>false</DCC_UseMSBuildExternally>
         <Manifest_File>..\..\(None)</Manifest_File>
-        <Debugger_DebugSourcePath>$(Debugger_DebugSourcePath)</Debugger_DebugSourcePath>
     </PropertyGroup>
     <Import Project="..\source.optset" Condition="'$(Base)'!='' And Exists('..\source.optset')"/>
     <Import Project="..\..\source.optset" Condition="'$(Base)'!='' And Exists('..\..\source.optset')"/>
@@ -100,10 +99,10 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="Calculator.Add.Feature.pas"/>
+        <DCCReference Include="Calculator.Add.Feat.pas"/>
         <DCCReference Include="Calculator.Engine.pas"/>
         <DCCReference Include="Calculator.SpecHelpers.pas"/>
-        <DCCReference Include="Calculator.Mult.Feature.pas"/>
+        <DCCReference Include="Calculator.Mult.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>..\samples.optset</DependentOn>
@@ -133,6 +132,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
+                <Platform value="Linux64">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
