--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -102,6 +102,8 @@
         <DCCReference Include="FeatureHooks.Feat.pas"/>
         <DCCReference Include="FeatureDataTable.Feat.pas"/>
         <DCCReference Include="FeatureSpecSuite.Feat.pas"/>
+        <DCCReference Include="FeatureContext.Feat.pas"/>
+        <DCCReference Include="SuiteContext.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>test.optset</DependentOn>
