feat(MiniSpec): Implement SuiteContext for suite-level context persistence (Paso 4)
- Added TSuiteContext base class and TSuiteContextClass metaclass
- Added UseContext<T> method to TMiniSpec for suite-level configuration
- Implemented FSuiteContext field and SetSuiteContextClass in TSpecSuite
- Enhanced ISpecContext interface with SetSuiteContext, SetFeatureContext, SetScenarioContext
- Implemented TSpecSuite.Run to create SuiteContext before features and destroy after
- SuiteContext now accessible globally via SpecContext.SuiteContext
- All 27 existing tests pass

--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -102,6 +102,7 @@
         <DCCReference Include="FeatureHooks.Feat.pas"/>
         <DCCReference Include="FeatureDataTable.Feat.pas"/>
         <DCCReference Include="FeatureSpecSuite.Feat.pas"/>
+        <DCCReference Include="SuiteContext.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>test.optset</DependentOn>
