refactor(MiniSpec): ISpecSuite<T> generic pattern for SuiteContext
- Add ISpecSuite<T> extending ISpecSuite (marker interface)
- Add TSpecSuite<T> with virtual CreateContext using T.Create
- TMiniSpec.UseContext<T> replaces suite with TSpecSuite<T>
- Remove obsolete base classes: TSuiteContext, TFeatureContext
- Remove SetSuiteContextClass (no longer needed)
- User classes no longer need to inherit from any base class

Rename test files for consistency:
- FeatureDataTable.Feat -> DataTable.Feat
- FeatureHooks.Feat -> Hooks.Feat
- FeatureSpecSuite.Feat -> SpecSuite.Feat
- FeatureWorld.Feat -> Context.Feat
- WorldLifecycle.Feat -> Lifecycle.Feat
- Delete empty SuiteContext.Feat

Tests: 27 pass, 0 fail

--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -97,12 +97,11 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="FeatureWorld.Feat.pas"/>
-        <DCCReference Include="WorldLifecycle.Feat.pas"/>
-        <DCCReference Include="FeatureHooks.Feat.pas"/>
-        <DCCReference Include="FeatureDataTable.Feat.pas"/>
-        <DCCReference Include="FeatureSpecSuite.Feat.pas"/>
-        <DCCReference Include="SuiteContext.Feat.pas"/>
+        <DCCReference Include="Context.Feat.pas"/>
+        <DCCReference Include="Lifecycle.Feat.pas"/>
+        <DCCReference Include="Hooks.Feat.pas"/>
+        <DCCReference Include="DataTable.Feat.pas"/>
+        <DCCReference Include="SpecSuite.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>test.optset</DependentOn>
