--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -102,6 +102,7 @@
         <DCCReference Include="Hooks.Feat.pas"/>
         <DCCReference Include="DataTable.Feat.pas"/>
         <DCCReference Include="SpecSuite.Feat.pas"/>
+        <DCCReference Include="Daf.MiniSpec.Doubles.Spec.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>test.optset</DependentOn>
