refactor: move all samples to their respective modules (monorepo structure)
- ConfigSample → src/Configuration/samples/
- MediatRSample → src/MediatR/samples/
- PingProcess → src/Commons/samples/
- ConsoleSample, HostedService → src/Application/samples/
- Move samples.optset to src/ (centralized optionsets)
- Create new DAFSamples.groupproj in src/
- Remove samples/ folder from root

--- a/src/MiniSpec/samples/CalculatorSpecs/CalculatorSpecs.dproj
+++ b/src/MiniSpec/samples/CalculatorSpecs/CalculatorSpecs.dproj
@@ -41,7 +41,7 @@
         <Cfg_2>true</Cfg_2>
         <Base>true</Base>
     </PropertyGroup>
-    <Import Project="..\..\..\..\samples\samples.optset" Condition="'$(Base)'!='' And Exists('..\..\..\..\samples\samples.optset')"/>
+    <Import Project="..\..\..\samples.optset" Condition="'$(Base)'!='' And Exists('..\..\..\samples.optset')"/>
     <PropertyGroup Condition="'$(Base)'!=''">
         <DCC_E>false</DCC_E>
         <DCC_F>false</DCC_F>
@@ -55,7 +55,7 @@
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Winapi;$(DCC_Namespace)</DCC_Namespace>
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
         <Icns_MainIcns>$(BDS)\bin\delphi_PROJECTICNS.icns</Icns_MainIcns>
-        <CfgDependentOn>..\..\..\..\samples\samples.optset</CfgDependentOn>
+        <CfgDependentOn>..\..\..\samples.optset</CfgDependentOn>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
@@ -105,7 +105,7 @@
         <DCCReference Include="Calculator.Mult.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
-            <DependentOn>..\..\..\..\samples\samples.optset</DependentOn>
+            <DependentOn>..\..\..\samples.optset</DependentOn>
         </BuildConfiguration>
         <BuildConfiguration Include="Release">
             <Key>Cfg_1</Key>
