--- a/src/Application/samples/TicTacToeSpecs/TicTacToeSpecs.dproj
+++ b/src/Application/samples/TicTacToeSpecs/TicTacToeSpecs.dproj
@@ -101,6 +101,9 @@
         </DelphiCompile>
         <DCCReference Include="TicTacToe.Game.pas"/>
         <DCCReference Include="TicTacToe.SpecHelpers.pas"/>
+        <DCCReference Include="TicTacToe.Placement.Steps.pas"/>
+        <DCCReference Include="TicTacToe.Movement.Steps.pas"/>
+        <DCCReference Include="TicTacToe.Victory.Steps.pas"/>
         <DCCReference Include="TicTacToe.Placement.Feat.pas"/>
         <DCCReference Include="TicTacToe.Movement.Feat.pas"/>
         <DCCReference Include="TicTacToe.Victory.Feat.pas"/>
