refactor: reestructurar en capas Clean Architecture
- Domain/       → TicTacToe.Game.pas (entidades, reglas de negocio)
- Presentation/ → TicTacToe.ViewPort.pas, TicTacToe.ViewModel.pas
- UI/           → TicTacToe.MainForm.pas/dfm (VCL Form)
- Specs/        → SpecHelpers, Steps, Features (BDD)
- Actualizar rutas in .dpr y DCCReference en .dproj
- 26/26 specs verdes — Fowler Step 5 (Restructure)

--- a/src/Application/samples/TicTacToeSpecs/TicTacToeApp.dproj
+++ b/src/Application/samples/TicTacToeSpecs/TicTacToeApp.dproj
@@ -97,10 +97,10 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="TicTacToe.Game.pas"/>
-        <DCCReference Include="TicTacToe.ViewPort.pas"/>
-        <DCCReference Include="TicTacToe.ViewModel.pas"/>
-        <DCCReference Include="TicTacToe.MainForm.pas">
+        <DCCReference Include="Domain\TicTacToe.Game.pas"/>
+        <DCCReference Include="Presentation\TicTacToe.ViewPort.pas"/>
+        <DCCReference Include="Presentation\TicTacToe.ViewModel.pas"/>
+        <DCCReference Include="UI\TicTacToe.MainForm.pas">
             <Form>MainForm</Form>
         </DCCReference>
         <BuildConfiguration Include="Base">
