refactor(minispec-test): rename Doubles test file to follow convention
Renamed Daf.MiniSpec.Doubles.Spec.pas -> Doubles.Feat.pas
- Removed Daf.MiniSpec prefix (consistent with other test files)
- Changed .Spec to .Feat (uses Feature/Rule/Scenario, not Describe/It)
- Updated unit declaration, .dpr and .dproj references
- 68/68 specs passing

--- a/src/MiniSpec/test/MiniSpecSpecs.dproj
+++ b/src/MiniSpec/test/MiniSpecSpecs.dproj
@@ -102,7 +102,7 @@
         <DCCReference Include="Hooks.Feat.pas"/>
         <DCCReference Include="DataTable.Feat.pas"/>
         <DCCReference Include="SpecSuite.Feat.pas"/>
-        <DCCReference Include="Daf.MiniSpec.Doubles.Spec.pas"/>
+        <DCCReference Include="Doubles.Feat.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
             <DependentOn>..\..\test.optset</DependentOn>
